business-skill-track/episode-generator-biz/0.47/references/mainline-first-topology.md
# 主线原文先行拓扑

## 原则

`mainline-story.json/complete_story`是唯一主线事实文本。先把它切成一条有起承转合的纯直线路径，再在这条路径上扫描决定裂缝。支线长在主线节点上；支线不得先生成一篇全路线故事，再反向压缩或重写主线。

## 主线分解

创建`mainline-decomposition.json`：

```json
{
  "contract_version": "nextplay.mainline-decomposition.v1",
  "mainline_sha256": "mainline-story.json规范化SHA-256",
  "segments": [
    {
      "segment_id": "mainline-001",
      "title": "候选分集标题",
      "source_text": "冻结可读故事中的连续逐字原文"
    }
  ]
}
```

所有`source_text`必须按出现顺序、无重叠、无遗漏、无改写覆盖完整故事；切片之间只允许存在原文空白。每个切片首先按完整戏剧运动判断：建立处境、完成行动变化、形成决定或落地结果。不得按预设节点数平均切字数。

创建完成后立即运行`python3 scripts/validate_mainline_projection.py CACHE_ROOT --decomposition-only`。只有该命令输出`PASS`，才能创建决策裂缝审计或任何支线材料。

## 裂缝与主线动作

沿这些主线切片扫描决定。裂缝位于切片内部时，只能在原文边界继续拆分切片：

- 来源切片保留到决定已成立、主线行动尚未执行。
- 冻结主线原本执行的动作成为一个选项。
- 该动作及其后果从下一主线切片开头继续，仍逐字使用原文。
- 其他选项才生成新的支线。

拆分后重新运行同一分解门禁；新门禁通过前，已有决策裂缝回执自动失效。不得改变原文以迁就选择形式。

## 正式映射

### 最终编号

先用临时标识完成全图，不让主线编号抢占顺序。节点与边全部冻结后，按程序流程图的显示顺序统一分配`episode-xxx`：

1. 从唯一入口开始，按深度从左向右逐层排列。
2. 同一深度按父选择的选项顺序从上到下排列；后续节点沿用其分支的上下位置。
3. 汇合节点排在全部直接前置之后；同层不同分支不得用“先编号完整主线、再追加支线”的方式打乱。
4. 选择节点与普通节点相同，按其实际层级和上下位置编号。

`validate_topology.py`以拓扑中后继和选项的书写顺序执行稳定广度优先遍历，实际编号必须与该顺序一致。

正式拓扑必须经过强制两版生成。第一版保存为`topology-draft-1.md`后立即废弃，不得成为任何下游材料的事实源。第二版必须重新从冻结故事材料推导，并且图形指纹与第一版不同；改名、换编号、改选项文字或仅换节点文案都不构成新形状。只有`topology.md`这个第二版可进入时长、情绪脊、梗概和正文。

拓扑完成时创建`mainline-path.json`：

```json
{
  "contract_version": "nextplay.mainline-path.v1",
  "path": [
    {"segment_id":"mainline-001","episode_id":"episode-001"}
  ]
}
```

映射必须包含全部主线切片且一一对应，顺序等于`route-duration.json/mainline_path`。每个非末尾主线节点必须直接连到下一个主线节点；有选择时，至少一个选项必须指向下一个主线节点。最终主线节点必须是冻结期待结局。

全体梗概生成后，主线`episode-synopses/<episode-id>.json/synopsis`必须逐字等于对应`source_text`。只有支线节点的梗概可以从支线事实另行生成。
